--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -7,4 +7,6 @@ jobs:
       - id: Deploy
         uses: google-github-actions/deploy-appengine@main
         with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          project: ${{ secrets.GCP_PROJECT_ID }}
+          credentials: ${{ secrets.GCP_SA_KEY }}
+          deliverables: ./app.yaml
