--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
+    "lib": ["esnext", "dom", "dom.iterable", "scripthost"],
+    "outDir": "dist/cinematheque-front"
   },
   "include": [
     "src/**/*.ts",
