--- a/app.yaml
+++ b/app.yaml
@@ -5,5 +5,5 @@ handlers:
     static_files: dist/cinematheque-front/\1
     upload: dist/cinematheque-front/(.*)(|\.map)
   - url: /(.*)
-    static_files: dist/cinematheque-front/index.html
-    upload: dist/cinematheque-front/index.html
+    static_files: dist/cinematheque-front/index.js
+    upload: dist/cinematheque-front/index.js
