--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -7,11 +7,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Setup node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: 16.x
       - run: npm install
-      - run: npm install vue-cli-service
+      - run: npm install @vue/cli
       - run: npm run build
       - id: Deploy
         uses: google-github-actions/deploy-appengine@main
