--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "npm run serve",
-    "serve": "vue-cli-service serve",
+    "start": "serve -s dist/cinematheque-front -l 9527",
+    "serve": "npm start",
     "build": "tsc && vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
