--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cinematheque-front",
   "version": "0.1.0",
   "private": true,
+  "main": "main.js",
   "scripts": {
     "start": "npm run serve",
     "serve": "vue-cli-service serve",
