--- a/package.json
+++ b/package.json
@@ -2,21 +2,22 @@
   "name": "cinematheque-front",
   "version": "0.1.0",
   "private": true,
-  "main": "main.js",
   "scripts": {
-    "start": "vue-cli-service build",
     "serve": "vue-cli-service serve",
     "build": "tsc && vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "vue-cli-service build"
   },
+  "main": "main.js",
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.14",
+    "@vue/cli-plugin-typescript": "~4.5.14",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/compat": "^3.2.20",
+    "@vue/compiler-sfc": "^3.2.20",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "axios": "^0.23.0",
