--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "main": "main.ts",
   "dependencies": {
     "@vue/compiler-sfc": "^3.2.20",
+    "@vue/cli": "~4.5.0",
     "axios": "^0.23.0",
     "core-js": "^3.6.5",
     "typescript": "~4.1.5",
