feat: deleting src/main.ts from tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,7 @@
     "src/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx",
-    "src/router/index.ts",
-    "src/main.ts"
+    "src/router/index.ts"
   ],
   "exclude": ["node_modules"]
 }
