--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "main": "main.js",
   "dependencies": {
     "axios": "^0.23.0",
     "core-js": "^3.6.5",
